@@ -5,6 +5,7 @@
 \section{Changes in Version 1.2-1 (2020-05-13)}{
   \itemize{
     \item{Adjust contrasts a fixed parameter contributes to.}
+    \item{Return numerically determined Hessians upon request.}
   }
 }
 
